# nexus-llm-analytics

./: .env.example  .gitignore  1.py  ACCURACY_TEST_REPORT.md  AUDIT_REPORT.md  BACKEND_FIX_SUMMARY.md  BACKEND_VERIFICATION_REPORT.md  COMPLETE_FIX_IMPROVEMENT_ROADMAP.md  COMPREHENSIVE_TEST_QUESTIONS.md  COMPREHENSIVE_TEST_RESULTS.md  DATA_AGNOSTIC_VERIFICATION.md  DATA_FLOW_GUIDE.md  Dockerfile  FILE_MANIFEST.md  FIX1_COMPLETION_SUMMARY.md  FIX_12_COMPLETE.md  FIX_12_ENTERPRISE_COMPLETE.md  FIX_17_COMPLETE.md  FIX_20_VERIFICATION_REPORT.md  FRONTEND_INTEGRATION_REPORT.md  INTEGRATION_MAP.md  MASTER_PROJECT_COMPLETION_PLAN.md  MASTER_ROADMAP.md  METHODOLOGY_AUDIT.md  ML_INTEGRATION_COMPLETE.md  ORCHESTRATOR_REFACTOR_REPORT.md  PAPER_ALIGNMENT_ROADMAP.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PRESENTATION_RESCUE_PLAN.md  PROJECT_ARCHITECTURE.md  PROJECT_DATA_AGNOSTIC_COMPLIANCE_REPORT.md  PROJECT_MENTAL_MODEL.md  PROJECT_ROADMAP_FOR_RESEARCH.md  PROJECT_ROADMAP_NEXT_LEVEL.md  PROJECT_UNDERSTANDING.md  Paper_Comparison_Summary.md  QUICK_START_CARD.txt  RAM_CONSUMPTION_FIX_GUIDE.md  RAM_FIXES_APPLIED.md  README.md  (+79 more)
backend/: main.py
benchmarks/: __init__.py  advanced_evaluation.py  baseline_comparisons.py  benchmark_dataset.json  benchmark_runner.py  cross_validation.py  hyperparameter_analysis.py  run_research_benchmarks.py  visualization.py
config/: .env.example  cot_review_config.json  cot_review_config_OPTIMIZED.json  user_preferences.json
deployment/: Dockerfile  docker-compose.yml
docs/: COMPLETE_PROJECT_EXPLANATION.md  CORE_SYSTEM_DOMAIN_AGNOSTIC_VERDICT.md  DEVELOPMENT_NOTES.md  DOCUMENTATION_INDEX.md  DOMAIN_AGNOSTIC_AUDIT_REPORT.md  DOMAIN_AGNOSTIC_IMPLEMENTATION_COMPLETE.md  DOMAIN_AGNOSTIC_VERIFICATION_REPORT.md  DYNAMIC_PLANNER_ENTERPRISE.md  ENTERPRISE_UPGRADE_v2.md  FIX5_USER_GUIDE.md  FIX_16_COMPLETE.md  FRONTEND_BACKEND_SYNC.md  GPU_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETION_CHECKLIST.md  INTELLIGENT_ROUTING_USER_GUIDE.md  MULTI_AGENT_DEMO_SCENARIO.md  PHASE4_VISUALIZATION_COMPLETE.md  PHASE7_TEST_PROGRESS_REPORT.md  PHASE_3A_SUMMARY.md  PHASE_3_4_DEEP_ENHANCEMENTS.md  PRODUCTION_README.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REAL_STREAMING_IMPLEMENTATION.md  RESEARCH_GRADE_IMPLEMENTATION_SUMMARY.md  RESEARCH_PAPER_OUTLINE.md  ROUTING_HIERARCHY_BEFORE_AFTER.md  ROUTING_HIERARCHY_FIX.md  ROUTING_HIERARCHY_IMPLEMENTATION_SUMMARY.md  ROUTING_IMPROVEMENT_ACTION_PLAN.md  SECURITY_CHECKLIST.md  SPECIALIST_CODE_GENERATION_QUICKREF.md  SPECIALIST_CODE_GEN_BEFORE_AFTER.md  SPECIALIST_CODE_GEN_IMPLEMENTATION_SUMMARY.md  SQL_SETUP_GUIDE.md  STRESS_TEST_ANALYSIS_REPORT.md  TECHNICAL_ARCHITECTURE_OVERVIEW.md  TWO_FRIENDS_MODEL_VERIFIED.md  UNIFIED_ARCHITECTURE.md  (+4 more)
nexus-llm-analytics-distribution_20251018_183430 (1)/: DISTRIBUTION_README.md  LICENSE  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  create_distribution_zip.py  pyproject.toml  temp_files.txt
nexus-llm-analytics-distribution_20251018_183430 (1)/config/: user_preferences.json
nexus-llm-analytics-distribution_20251018_183430 (1)/data/history/: query_history.json
nexus-llm-analytics-distribution_20251018_183430 (1)/data/samples/: 1.json  complex_nested.json  financial_quarterly.json  large_transactions.json  sales_timeseries.json
nexus-llm-analytics-distribution_20251018_183430 (1)/docs/: BACKEND_CONFIG_QUICKREF.md  COMPLETE_PROJECT_EXPLANATION.md  MODEL_COMMUNICATION.md  README.md  SMART_MODEL_SELECTION.md  TECHNICAL_ARCHITECTURE_OVERVIEW.md  TECH_STACK.md  TWO_FRIENDS_MODEL_GUIDE.md  VISUAL_ARCHITECTURE_GUIDE.md
nexus-llm-analytics-distribution_20251018_183430 (1)/scripts/: launch.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/: main.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/agents/: crew_manager.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/api/: analyze.py  health.py  history.py  models.py  report.py  upload.py  visualize.py  viz_enhance.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/core/: advanced_cache.py  analysis_manager.py  chromadb_client.py  circuit_breaker.py  config.py  crew_singleton.py  crewai_import_manager.py  document_indexer.py  enhanced_cache_integration.py  enhanced_reports.py  llm_client.py  model_selector.py  optimized_data_structures.py  optimized_tools.py  optimizers.py  plugin_system.py  query_parser.py  sandbox.py  security_guards.py  utils.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/plugins/: financial_agent.py  ml_insights_agent.py  sql_agent.py  statistical_agent.py  time_series_agent.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/utils/: __init__.py  data_utils.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/backend/visualization/: __init__.py  scaffold.py
nexus-llm-analytics-distribution_20251018_183430 (1)/src/frontend/: package.json
nexus-llm-analytics-distribution_20251018_183430 (1)/src/frontend/app/: globals.css  layout.tsx  page-optimized.tsx  page.tsx
nexus-llm-analytics-distribution_20251018_183430 (1)/src/frontend/components/: OptimizedComponents.tsx  analytics-sidebar.tsx  backend-url-settings.tsx  chart-viewer.tsx  file-preview.tsx  header.tsx  model-settings.tsx  query-input.tsx  results-display.tsx
nexus-llm-analytics-distribution_20251018_183430 (1)/src/frontend/hooks/: useDashboardState.ts  useWebSocket.ts
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/: conftest.py
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/e2e/: test_user_workflows.py
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/fuzz/: test_boundary_validation.py  test_property_based.py  test_stress_robustness.py
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/integration/: test_component_interactions.py
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/security/: test_penetration_testing.py  test_security_validation.py
nexus-llm-analytics-distribution_20251018_183430 (1)/tests/unit/: test_data_structures.py  test_file_io.py  test_llm_client.py
(+750 files in other folders)
