[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-llm-analytics"
version = "1.0.0"
description = "Multi-Agent Data Analysis Assistant with local-first, privacy-preserving design"
authors = [{name = "KOTAHARSHA25", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "docs/README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "aiofiles",
    "werkzeug",
    "langchain-ollama",
    "langchain-community",
    "pandas",
    "polars",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "xarray",
    "plotly",
    "seaborn",
    "matplotlib",
    "chromadb",
    "sentence-transformers",
    "PyPDF2",
    "pdfplumber",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "striprtf",
    "reportlab",
    "jinja2",
    "RestrictedPython",
    "psutil",
    "structlog",
    "colorlog",
]

[project.urls]
Homepage = "https://github.com/KOTAHARSHA25/nexus-llm-analytics"
Repository = "https://github.com/KOTAHARSHA25/nexus-llm-analytics"
Issues = "https://github.com/KOTAHARSHA25/nexus-llm-analytics/issues"

[project.scripts]
nexus-backend = "src.backend.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "fuzz: Fuzz and property-based tests",
    "security: Security tests",
    "slow: Slow-running tests",
    "async: Async tests",
    "mock: Tests using mocks"
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | env
  | chroma_db
  | archive
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["archive", "data", "__pycache__", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["archive/", "tests/", "data/"]

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101", "B104", "B108"]

[tool.coverage.run]
source = ["src/backend"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/archive/*",
    "*/chroma_db/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pass"
]
show_missing = true
precision = 2
fail_under = 60

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"